form section done

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-[#f4f5f7] h-[100vh] flex justify-center items-center">
-    <form class=" bg-white rounded-2xl p-5 border-red-500">
+    <form class="w-[350px] bg-white rounded-2xl p-8 border-red-500">
         <div class="mt-5">
-            <label for="">Mobile Number</label><br>
-            <input type="text" placeholder="Type here" class="input bg-[#f4f5f7] mt-3" />
+            <label class="font-semibold" for="">Mobile Number</label><br>
+            <input type="text" placeholder="Enter your number" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
         </div>
         <div class="mt-5">
-            <label for="">4 Digit Pin</label><br>
-            <input type="text" placeholder="Type here" class="input bg-[#f4f5f7] mt-3" />
+            <label class="font-semibold" for="">4 Digit Pin</label><br>
+            <input type="text" placeholder="Enter 4 Digit Pin" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
         </div>
-        <button class="btn btn-primary mt-5 w-full rounded-3xl">Primary</button>
+        <button class="btn text-white bg-[#0874F2] mt-5 w-full rounded-3xl">Login</button>
     </form>
 
 </body>
