--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
     <form class="w-[350px] bg-white rounded-2xl p-8 ">
         <div class="mt-5">
             <label class="font-semibold" for="">Mobile Number</label><br>
-            <input type="text" placeholder="Enter your number" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
+            <input type="text" placeholder="Enter your number" id="mobile-number" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
         </div>
         <div class="mt-5">
             <label class="font-semibold" for="">4 Digit Pin</label><br>
-            <input type="text" placeholder="Enter 4 Digit Pin" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
+            <input type="text" placeholder="Enter 4 Digit Pin" id="pin-number" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
         </div>
-        <button class="btn text-white bg-[#0874F2] mt-5 w-full rounded-3xl">Login</button>
+        <button type="button" class="btn text-white bg-[#0874F2] mt-5 w-full rounded-3xl" id="loginButton">Login</button>
     </form>
+
+    <!-- JavaScript connection -->
+     <script src="script.js"></script>
 
 </body>
 </html>
