--- a/home.html
+++ b/home.html
@@ -8,8 +8,56 @@
   <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <!--  Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- fontAwesome CDN -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-[#f4f5f7] h-[100vh]">
-    
+    <div class="max-w-lg mx-auto bg-white p-3 rounded-b-xl">
+    <div class=" min-h-[50px] flex justify-between items-center  p-3 border-b-2 border-gray-400 p-3">
+        <div class="flex">
+            <img src="assets/Group.png" class="h-[50px]" alt="" srcset="">
+            <div class="ml-3">
+                <h2 class="font-bold">$<span>45000</span></h2>
+                <p class="text-[#0808080]">Available Balance</p>
+            </div>
+        </div>
+        <div>
+            <button class="btn border-2 text-[#0808080] "><i class="fa-solid fa-arrow-right-from-bracket rotate-180"></i>Log Out</button>
+        </div>
+
+    </div>
+
+    <div class="max-w-lg mx-auto mt-8">
+        <h1 class="text-2xl font-bold p-3">🔥 Welcome to CashBee!</h1>
+        <p class="text-[#080808080]">Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
+    </div>
+
+    <div class=" min-h-[200px] grid grid-cols-3 max-w-lg mx-auto gap-4 p-3">
+        <div class="border-2 border-green-500 text-center p-3 rounded-xl">
+            <img src="assets/wallet1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+        </div>
+        <div class="border-2 border-green-500 text-center p-3 rounded-xl">
+            <img src="assets/send1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+        </div>
+        <div class="border-2 border-green-500 text-center p-3 rounded-xl">
+            <img src="assets/money1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+        </div>
+        <div class="border-2 border-green-500 text-center p-3 rounded-xl">
+            <img src="assets/bonus1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+        </div>
+        <div class="border-2 border-green-500 text-center p-3 rounded-xl">
+            <img src="assets/purse1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+        </div>
+        <div class="border-2 border-green-500 text-center p-3 rounded-xl">
+            <img src="assets/transaction1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
