--- a/home.html
+++ b/home.html
@@ -27,12 +27,12 @@
 
     </div>
 
-    <div class="max-w-lg mx-auto mt-8">
+    <div class=" mt-8">
         <h1 class="text-2xl font-bold p-3">🔥 Welcome to CashBee!</h1>
         <p class="text-[#080808080]">Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
     </div>
 
-    <div class=" min-h-[200px] grid grid-cols-3 max-w-lg mx-auto gap-4 p-3">
+    <div class=" min-h-[200px] grid grid-cols-3  gap-4 p-3">
         <div class="border-2 border-green-500 text-center p-3 rounded-xl">
             <img src="assets/wallet1.png" class="mx-auto" alt="">
             <h2>Add Money</h2>
@@ -59,5 +59,38 @@
         </div>
     </div>
     </div>
+
+    <!-- all form sections -->
+<div class="all-form-sections max-w-lg mx-auto p-3">
+    <div>
+        <h1>Add Money</h1>
+        <form action="" class="bg-white rounded-2xl p-8">
+            <div>
+                <h1 class="font-semibold">Select a Bank</h1>
+                <select class="select bg-[#f4f5f7] mt-3 rounded-3xl w-full">
+                    <option >Pick a Bank</option>
+                    <option>IFIC Bank</option>
+                    <option>Brac Bank</option>
+                    <option>Pubali Bank</option>
+                </select>
+            </div>
+            <div>
+                <label class="font-semibold" for="">Bank Account Number</label><br>
+            <input type="text" placeholder="Enter your 11 digit Account number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+            </div>
+            <div>
+                <label class="font-semibold" for="">Amount to Add</label><br>
+            <input type="text" placeholder="Add Amount to withdraw" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+            </div>
+            <div>
+                <label class="font-semibold" for="">Pin Number</label><br>
+            <input type="text" placeholder="Enter 4 digit pin number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+            </div>
+            <button type="button" class="btn text-white bg-[#0874F2] mt-5 w-full rounded-3xl" >Add Money</button>
+        </form>
+    </div>
+    
+</div>
+
 </body>
 </html>
