--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <button type="button" class="btn text-white bg-[#0874F2] mt-5 w-full rounded-3xl" id="loginButton">Login</button>
     </form>
 
+    <h3>Notes: wants to see magic then input this
+        <br>mobile-number:1234567890;<br>pin:1234.
+    </h3>
+
     <!-- JavaScript connection -->
      <script src="script.js"></script>
 
