--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <div class="flex">
             <img src="assets/Group.png" class="h-[50px]" alt="" srcset="">
             <div class="ml-3">
-                <h2 class="font-bold">$<span>45000</span></h2>
+                <h2 class="font-bold">$<span id="available-balance">45000</span></h2>
                 <p class="text-[#0808080]">Available Balance</p>
             </div>
         </div>
@@ -39,23 +39,23 @@
         </div>
         <div class="border-2 border-green-500 text-center p-3 rounded-xl">
             <img src="assets/send1.png" class="mx-auto" alt="">
-            <h2>Add Money</h2>
+            <h2>Cashout</h2>
         </div>
         <div class="border-2 border-green-500 text-center p-3 rounded-xl">
             <img src="assets/money1.png" class="mx-auto" alt="">
-            <h2>Add Money</h2>
+            <h2>Transfer Money</h2>
         </div>
         <div class="border-2 border-green-500 text-center p-3 rounded-xl">
             <img src="assets/bonus1.png" class="mx-auto" alt="">
-            <h2>Add Money</h2>
+            <h2>Get Bonus</h2>
         </div>
         <div class="border-2 border-green-500 text-center p-3 rounded-xl">
             <img src="assets/purse1.png" class="mx-auto" alt="">
-            <h2>Add Money</h2>
+            <h2>Pay Bill</h2>
         </div>
         <div class="border-2 border-green-500 text-center p-3 rounded-xl">
             <img src="assets/transaction1.png" class="mx-auto" alt="">
-            <h2>Add Money</h2>
+            <h2>Transactions</h2>
         </div>
     </div>
     </div>
@@ -63,12 +63,12 @@
     <!-- all form sections -->
 <div class="all-form-sections max-w-lg mx-auto p-3">
     <div>
-        <h1>Add Money</h1>
+        <h1 class="my-5 font-bold">Add Money</h1>
         <form action="" class="bg-white rounded-2xl p-8">
             <div>
                 <h1 class="font-semibold">Select a Bank</h1>
-                <select class="select bg-[#f4f5f7] mt-3 rounded-3xl w-full">
-                    <option >Pick a Bank</option>
+                <select id="bank" class="select bg-[#f4f5f7] mt-3 rounded-3xl w-full">
+                    <option >Select Bank</option>
                     <option>IFIC Bank</option>
                     <option>Brac Bank</option>
                     <option>Pubali Bank</option>
@@ -76,21 +76,22 @@
             </div>
             <div>
                 <label class="font-semibold" for="">Bank Account Number</label><br>
-            <input type="text" placeholder="Enter your 11 digit Account number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+            <input id="accountNumber" type="text" placeholder="Enter your 11 digit Account number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
             </div>
             <div>
                 <label class="font-semibold" for="">Amount to Add</label><br>
-            <input type="text" placeholder="Add Amount to withdraw" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+            <input id="addAmount" type="text" placeholder="Add Amount to withdraw" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
             </div>
             <div>
                 <label class="font-semibold" for="">Pin Number</label><br>
-            <input type="text" placeholder="Enter 4 digit pin number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+            <input id="addPin" type="text" placeholder="Enter 4 digit pin number" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
             </div>
-            <button type="button" class="btn text-white bg-[#0874F2] mt-5 w-full rounded-3xl" >Add Money</button>
+            <button id="add-money-btn" type="button" class="btn text-white bg-[#0874F2] mt-5 w-full rounded-3xl" >Add Money</button>
         </form>
     </div>
     
 </div>
 
+<script src="home.js"></script>
 </body>
 </html>
