--- a/home.html
+++ b/home.html
@@ -33,11 +33,11 @@
     </div>
 
     <div class=" min-h-[200px] grid grid-cols-3  gap-4 p-3">
-        <div class="border-2 border-green-500 text-center p-3 rounded-xl">
+        <div id="add-button" class="border-2 border-green-500 text-center p-3 rounded-xl">
             <img src="assets/wallet1.png" class="mx-auto" alt="">
             <h2>Add Money</h2>
         </div>
-        <div class="border-2 border-green-500 text-center p-3 rounded-xl">
+        <div id="cash-out-button" class="border-2 border-green-500 text-center p-3 rounded-xl">
             <img src="assets/send1.png" class="mx-auto" alt="">
             <h2>Cashout</h2>
         </div>
@@ -59,7 +59,7 @@
         </div>
     </div>
     </div>
-
+<!-- add money -->
     <!-- all form sections -->
 <div class="all-form-sections max-w-lg mx-auto p-3">
     <div>
