--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     </div>
     <form class="w-[350px] bg-white rounded-2xl p-8 ">
-        <div class="mt-5">
+        <div>
             <label class="font-semibold" for="">Mobile Number</label><br>
             <input type="text" placeholder="Enter your number" id="mobile-number" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
         </div>
