--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
             </div>
             <div>
                 <label class="font-semibold" for="">Amount to Add</label><br>
-            <input id="addAmount" type="text" placeholder="Add Amount to withdraw" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+            <input id="addAmount" type="text" placeholder="Add Amount to Deposit" class="input bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
             </div>
             <div>
                 <label class="font-semibold" for="">Pin Number</label><br>
