--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
             <img src="assets/send1.png" class="mx-auto" alt="">
             <h2>Cashout</h2>
         </div>
-        <div id="transfer-money-button" class="border-2 border-green-500 text-center p-3 rounded-xl">
+        <div id="transfer-button" class="border-2 border-green-500 text-center p-3 rounded-xl">
             <img src="assets/money1.png" class="mx-auto" alt="">
             <h2>Transfer Money</h2>
         </div>
@@ -118,27 +118,27 @@
 </div>
 <!-- Transfer Money  -->
 
-<!-- <div id="transfer-money-parent">
+<div id="transfer-money-parent" style="display: none;">
     <h1 class="my-5 font-bold">Transfer Money</h1>
-</div> -->
+</div>
 
 <!-- get bonus  -->
 
-<!-- <div id="get-bonus-parent">
+<div id="get-bonus-parent">
     <h1 class="my-5 font-bold">Get Bonus</h1>
-</div> -->
+</div>
 
 <!-- pay bill  -->
 
-<!-- <div id="pay-bill-parent">
+<div id="pay-bill-parent">
     <h1 class="my-5 font-bold">Pay Bill</h1>
-</div> -->
+</div>
 
 <!-- transactions  -->
 
-<!-- <div id="transactions-parent">
+<div id="transactions-parent">
     <h1 class="my-5 font-bold">Transactions</h1>
-</div> -->
+</div>
 <script src="home.js"></script>
 </body>
 </html>
