transaction feature ok

--- a/home.html
+++ b/home.html
@@ -94,8 +94,6 @@
 
 <!-- cash out  -->
 <div  class="all-form-sections max-w-lg mx-auto p-3">
-
-
 <div id="cash-out-parent"  style="display: none;">
     <h1 class="my-5 font-bold">Cash out</h1>
     <form action="" class="bg-white rounded-2xl p-8">
@@ -117,27 +115,28 @@
 </div>
 </div>
 <!-- Transfer Money  -->
-
+<div  class="all-form-sections max-w-lg mx-auto p-3">
 <div id="transfer-money-parent" style="display: none;">
     <h1 class="my-5 font-bold">Transfer Money</h1>
 </div>
-
+</div>
 <!-- get bonus  -->
-
+<div  class="all-form-sections max-w-lg mx-auto p-3">
 <div id="get-bonus-parent">
     <h1 class="my-5 font-bold">Get Bonus</h1>
 </div>
-
+</div>
 <!-- pay bill  -->
-
+<div  class="all-form-sections max-w-lg mx-auto p-3">
 <div id="pay-bill-parent">
     <h1 class="my-5 font-bold">Pay Bill</h1>
 </div>
-
+</div>
 <!-- transactions  -->
-
+<div  class="all-form-sections max-w-lg mx-auto p-3">
 <div id="transactions-parent">
     <h1 class="my-5 font-bold">Transactions</h1>
+</div>
 </div>
 <script src="home.js"></script>
 </body>
